@@ -7,6 +7,7 @@ older versions.
 Current git version
 -------------------
 
+  * New autostart object with attributes 'path', 'running', 'pid', 'last_status'
   * New client attribute 'floating_effectively' and associated X11 properties
     'HLWM_FLOATING_WINDOW' and 'HLWM_TILING_WINDOW'
   * New read-only client attribute 'decoration_geometry'.
